--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-body {
-	background-color: black;
+.borderless.topmenu.container.menu {
+  border: none;
+  box-shadow: none;
+}
+
+.middle-section {
+  background-image: url("http://murphyshawaii.com/media/2014/04/murphys-front.jpg");
+  height: 500px;
+  background-size: cover;
+}
+
+.footer {
+  height: 200px;
+  background-color: #004030;
+  color: white;
 }
